--- a/wp-content/themes/intrepid/css/templates/model-single.scss
+++ b/wp-content/themes/intrepid/css/templates/model-single.scss
@@ -1250,24 +1250,15 @@
         margin-bottom: 20px;
         color: $white;
 
-        img {
+        a {
+            display: block;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
             border: 1px solid $dusty-gray;
-            @media #{$phone} {
-                width: 100%;
-            }
         }
 
-        &--video {
-            &:before {
-                content: "";
-                display: block;
-                width: 100%;
-                height: 100%;
-                position: absolute;
-                top: 0;
-                left: 0;
-                background-color: rgba(31, 34, 37, 0.2);
-            }
+        &.gallery-grid__item--video {
 
             .play-btn {
                 position: absolute;
@@ -1279,12 +1270,36 @@
                     left: 50%;
                 }
             }
+
+            a {
+                position: relative;
+                padding-bottom: calc(765/1180 * 100%);
+                z-index: 2;
+
+                &:before {
+                    content: "";
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    background-color: rgba(31, 34, 37, 0.2);
+                    z-index: 1;
+                    pointer-events: none;
+                }
+            }
         }
 
-        &--half {
+        &.gallery-grid__item--half {
             width: calc(50% - 10px);
+
             @media #{$phone} {
                 width: 100%;
+            }
+
+            a {
+                padding-bottom: calc(246/580 * 100%);
             }
         }
 
@@ -1292,17 +1307,27 @@
             width: 100%;
         }
 
-        &--one-third {
+        &.gallery-grid__item--one-third {
             width: calc(33.33% - 13px);
+
             @media #{$phone} {
                 width: 100%;
             }
+
+            a {
+                padding-bottom: calc(256/378 * 100%);
+            }
         }
 
-        &--two-third {
+        &.gallery-grid__item--two-third {
             width: calc(66.66% - 6px);
+
             @media #{$phone} {
                 width: 100%;
+            }
+
+            a {
+                padding-bottom: calc(256/778 * 100%);
             }
         }
     }
@@ -1316,6 +1341,7 @@
     transform: translate(0, -50%);
     max-width: 524px;
     width: 100%;
+    z-index: 2;
 
     img {
         border: none !important;
