--- a/wp-content/themes/intrepid/css/partials/_hero.scss
+++ b/wp-content/themes/intrepid/css/partials/_hero.scss
@@ -172,11 +172,10 @@
 }
 
 .play-btn {
-    background: url("images/video-play.png") no-repeat 0 0;
+    position: relative;
     width: 170px;
     height: 170px;
     background-size: cover;
-    text-indent: -85px;
     letter-spacing: 3.6px;
     text-transform: uppercase;
     font-size: 15px;
@@ -184,18 +183,63 @@
     font-weight: 700;
     display: flex;
     align-items: center;
+
     @media #{$phone} {
         width: 90px;
         height: 90px;
         top: 46px;
         font-size: 12px;
-        text-indent: -105px;
         right: auto;
         left: 270px;
     }
+
     @media #{$phone} {
         right: 10px;
         left: auto;
+    }
+
+    &:before {
+        content: '';
+        display: block;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: url("images/video-play-icon.png") no-repeat 0 0;
+        background-size: contain;
+        pointer-events: none;
+    }
+
+    &:after {
+        content: '';
+        display: block;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: url("images/video-play-ring.png") no-repeat 0 0;
+        background-size: contain;
+        pointer-events: none;
+        transition: $transition;
+    }
+
+    &:hover,
+    &:focus {
+
+        &:after {
+            transform: rotate(-166deg);
+        }
+    }
+
+    span {
+        display: block;
+        text-indent: -85px;
+
+        @media #{$phone} {
+            text-indent: -105px;
+        }
     }
 }
 
